# ai-companion

./: .gitignore  package.json  vite.config.ts
.github/workflows/: tauri.yml
src/: routeTree.gen.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: chat-input.tsx  chat-message.tsx  code-block.tsx  file-preview.tsx  file-tabs.tsx  file-tree.tsx  logo.tsx  markdown-renderer.tsx  model-selector.tsx  project-bar.tsx  project-selector.tsx  settings-modal.tsx  sidebar.tsx  theme-selector.tsx  theme-toggle.tsx  topbar.tsx  typing-indicator.tsx  welcome-screen.tsx
src/hooks/: use-chat-session.ts
src/lib/: ai.ts  app-themes.ts  fs-access.ts  mock-ai.ts  models.ts  monaco-themes.ts
src/routes/: __root.tsx  chat.$threadId.tsx  chat.index.tsx  chat.tsx  index.tsx  workspace.index.tsx  workspace.tsx
src/store/: chat-store.ts  project-store.ts  settings-store.ts  workspace-store.ts
