[package]
name = "ai-companion"
version = "0.1.0"
description = "AI Companion - Your intelligent coding assistant"
authors = ["you"]
edition = "2021"

[lib]
name = "ai_companion_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
